fixed some spacing and colors

--- a/coachmate-frontend/src/components/pages/Signup.module.css
+++ b/coachmate-frontend/src/components/pages/Signup.module.css
@@ -17,7 +17,7 @@
 }
 
 .other {
-  background-color: white;
+  background: white;
 }
 
 .entries {
